# Llama-Aider

./: .gitignore  Justfile  pyproject.toml
aider/tasks/: CONVENTIONS.md  aider_rules.md
aider/tasks/task_1/: .aider.config.yaml  prompt.txt  task.md
aider/tasks/task_2/: .aider.config.yaml  prompt.txt
models/: README.md
tools/aider_yaml_generator/: cli.py  collect_rw_ro.py  constants.py  dev_run.sh
tools/aider_yaml_generator/ast/: marker_visitor.py  usage_visitor.py
tools/aider_yaml_generator/extended_features/: build_yaml_text.py  collect_with_depth.py  ensure_list_unique_sorted.py  estimate_tokens.py  file_entry.py  human_bytes.py  largest_top_n.py  load_existing_model_from_yaml.py  read_text_bytes.py  rel_or_abs.py
tools/aider_yaml_generator/path_utils/: extract_imports.py  file_has_markers.py  file_has_usage.py  iter_py.py  normalize_seed_to_path.py  resolve_module_to_path.py  resolve_relative_import.py  to_module_name.py
